--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Background Color Switcher</title>
   </head>
   <body>
+    <h1>Color Scheme Switcher</h1>
+    <ul class="colors">
+      <li id="red"></li>
+      <li id="green"></li>
+      <li id="yellow"></li>
+      <li id="blue"></li>
+    </ul>
+    <p>
+      Try clicking on one of the colors above <br />
+      to change the background color of this page!
+    </p>
     <script src="script.js"></script>
   </body>
 </html>
